# exercises

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_cmake.yml
binary_search/: CMakeLists.txt  magic_key.cpp  magic_key.h  magic_key.t.cpp
binary_tree/: CMakeLists.txt  binary_tree.cpp  binary_tree.h  binary_tree.t.cpp
cmake/: AddProtos.cmake
concatenated_list/: CMakeLists.txt  concatenated_list.cpp  concatenated_list.h  concatenated_list.t.cpp
dynamic_programming/: CMakeLists.txt  all_permutations.cpp  all_permutations.h  all_permutations.t.cpp  all_subsets.h  all_subsets.t.cpp  edit_distance.cpp  edit_distance.h  edit_distance.t.cpp  robot_navigator.cpp  robot_navigator.h  robot_navigator.t.cpp  three_steps.cpp  three_steps.h  three_steps.t.cpp
edit_distance/: CMakeLists.txt  edit_distance.cpp  edit_distance.h  edit_distance.t.cpp
find_n_best/: CMakeLists.txt  find_n_best.h  find_n_best.t.cpp
graph/: CMakeLists.txt  are_connected.cpp  are_connected.h  color.cpp  color.h  graph.cpp  graph.h  graph.proto  graph.t.cpp  has_path.cpp  has_path.h  has_path.t.cpp
hex_bin_match/: CMakeLists.txt  hex_bin_match.cpp  hex_bin_match.h  hex_bin_match.t.cpp
linked_list/: CMakeLists.txt  linked_list.cpp  linked_list.h  linked_list.t.cpp  list.cpp  list.h  list.t.cpp  node.cpp  node.h  node.proto  node.t.cpp  node_iterator.h
numbers/: CMakeLists.txt  hex_bin_match.cpp  hex_bin_match.t.cpp  recursive_multiply.cpp  recursive_multiply.h  recursive_multiply.t.cpp  sieve_of_eratosthenes.bench.cpp  sieve_of_eratosthenes.cpp  sieve_of_eratosthenes.h  sieve_of_eratosthenes.t.cpp
queues/: CMakeLists.txt  find_n_best.h  find_n_best.t.cpp
reverse_concatenated_list/: CMakeLists.txt  reverse_concatenated_list.cpp  reverse_concatenated_list.h  reverse_concatenated_list.t.cpp
sieve_of_eratosthenes/: CMakeLists.txt  sieve_of_eratosthenes.bench.cpp  sieve_of_eratosthenes.cpp  sieve_of_eratosthenes.h  sieve_of_eratosthenes.t.cpp
tree/: CMakeLists.txt  binary_tree.cpp  binary_tree.h  binary_tree.t.cpp  node.proto  tree.cpp  tree.h  tree.proto  tree.t.cpp
tree/binary/: CMakeLists.txt  binary_tree.cpp  binary_tree.h  binary_tree.t.cpp  binary_tree_hash.cpp  binary_tree_hash.h  binary_tree_hash.t.cpp  binary_tree_visit.cpp  binary_tree_visit.h  binary_tree_visit.t.cpp  is_sub_tree.cpp  is_sub_tree.h  is_sub_tree.t.cpp
