cmake_minimum_required(VERSION 3.16)
project(life++)

set(CMAKE_CXX_STANDARD 17)
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
message(STATUS "CMAKE_MODULE_PATH: ${CMAKE_MODULE_PATH}")

enable_testing()

add_subdirectory(externals)
add_subdirectory(binary_tree)
add_subdirectory(dynamic_programming)
add_subdirectory(edit_distance)
add_subdirectory(find_n_best)
add_subdirectory(hex_bin_match)
if(NOT MSVC)
    add_subdirectory(linked_list)
endif()
add_subdirectory(graph)
add_subdirectory(sieve_of_eratosthenes)
